@@ -1129,6 +1129,27 @@ value_t value_t::value(const std::time_t moment) const
   }
 }
 
+void value_t::reduce()
+{
+  switch (type) {
+  case BOOLEAN:
+    throw new value_error("Cannot reduce a boolean");
+  case DATETIME:
+    throw new value_error("Cannot reduce a date/time");
+  case INTEGER:
+    break;
+  case AMOUNT:
+    ((amount_t *) data)->reduce();
+    break;
+  case BALANCE:
+    ((balance_t *) data)->reduce();
+    break;
+  case BALANCE_PAIR:
+    ((balance_pair_t *) data)->reduce();
+    break;
+  }
+}
+
 void value_t::round()
 {
   switch (type) {
